# honeys_fragrance

./: .gitignore  alembic.ini  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: b6b53feef39f_create_user_address_table.py  b76af0c1ef8b_create_user_table.py
scripts/: run_dev.sh
src/: main.py
src/honeys_fragrance/api/: dep.py
src/honeys_fragrance/controller/: __init__.py  base.py  user_address_controller.py  user_controller.py
src/honeys_fragrance/core/: init_logger.py  settings.py  utils.py
src/honeys_fragrance/db/: base.py  session.py
src/honeys_fragrance/models/: __init__.py  user.py  user_address.py
src/honeys_fragrance/schemas/: __init__.py  base.py  user.py  user_address.py  utils.py
tests/: conftest.py  test_main.py
