[tool.poetry]
name = "honeys-fragrance"
version = "0.1.0"
description = ""
authors = ["oyinda-subair <oyinda.subair@gmail.com>"]
readme = "README.md"
packages = [{include = "honeys_fragrance", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
